--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.545.0",
     "rc-slider": "^11.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
