--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "rc-slider": "^11.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
