--- a/backend/.env
+++ b/backend/.env
@@ -9,8 +9,8 @@ ML_SERVICE_URL=http://ml:8000/predict
 ML_MODEL_PATH=/app/model/model.bin
 
 # Frontend
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=https://ecocommute-backend.onrender.com/api
 
-# Authentication (NEW)
+# Authentication
 JWT_SECRET=your_super_secret_jwt_key_change_in_production_12345
 JWT_EXPIRE=7d
